Fix execution counts and update sign data collection in test.ipynb; add main.ipynb file.

--- a/test.ipynb
+++ b/test.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "84732aa3",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a5c29fd6",
    "metadata": {},
    "outputs": [],
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "28732692",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Preparing to collect data for sign: 'SPACE'\n",
+      "Preparing to collect data for sign: 'no'\n",
       "Position yourself in front of the camera.\n",
       "Press Enter to start...\n"
      ]
@@ -799,15 +799,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1745484867.648079 3438987 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.4), renderer: Apple M1\n",
-      "W0000 00:00:1745484867.742374 3474224 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745484867.760967 3474224 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745484867.764171 3474224 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745484867.764195 3474217 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745484867.765311 3474222 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745484867.775161 3474222 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745484867.775803 3474224 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745484867.779817 3474217 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+      "I0000 00:00:1746353795.833937 12242317 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.4), renderer: Apple M1\n",
+      "W0000 00:00:1746353795.952274 12256597 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1746353795.971664 12256591 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1746353795.974583 12256591 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1746353795.974607 12256597 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1746353795.974667 12256598 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1746353795.980323 12256598 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1746353795.983592 12256597 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1746353795.990694 12256591 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     },
     {
@@ -843,10 +843,10 @@
       "Sequence man_26 complete. Prepare for next sequence...\n",
       "Sequence man_27 complete. Prepare for next sequence...\n",
       "Sequence man_28 complete. Prepare for next sequence...\n",
-      "Data collection for sign 'SPACE' complete!\n",
+      "Data collection for sign 'no' complete!\n",
       "Collected 30 sequences for user 'man' with 30 frames each.\n",
-      "Data saved in /Users/mandev/Library/CloudStorage/OneDrive-man1605/Sign_Language/data/SPACE\n",
-      "Total sequences for 'SPACE': 30\n"
+      "Data saved in /Users/mandev/Library/CloudStorage/OneDrive-man1605/Sign_Language/data/no\n",
+      "Total sequences for 'no': 30\n"
      ]
     }
    ],
